# schlieren_optical_flow

./: .gitignore  CMakeLists.txt  OpenCVHelper.hpp  README.md  SIV.sublime-project  SIV.sublime-workspace  batch_comparison.cpp  batch_optical_flow_estimation.cpp  brox_of.cpp  depth_image_optical_flow.cpp  image_pair_optical_flow_estimation_and_vis.cpp  main.cpp  mean_flow_on_path.cpp  minima_and_maxima_tracking.cpp  of_lukas_kanade.cpp  optical_flow_helpers.hpp  single_comparison_and_vis.cpp  util.hpp  vis_mean_optical_flow.cpp
descriptors/: Descriptors.cpp  Descriptors.hpp
feature_matching/: Descriptors.cpp  Descriptors.hpp  Matching.cpp  Matching.hpp
helpers/: util.hpp
